<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView_player"
    app:cardCornerRadius="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            tools:src="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                tools:text="@string/name"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/national"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                tools:text="@string/national"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorBlack"
                tools:text="@string/position"
                android:textSize="20sp"
                android:layout_marginBottom="5dp"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
